--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -45,6 +45,196 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="15" data-price="18.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xUff55"><img src="https://m.media-amazon.com/images/I/71B38TdC1DL._SR400,400_.jpg" alt="GXFCWSRY Inflatable Travel Pillow" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xUff55">GXFCWSRY Inflatable Travel Pillow, Soft Velvet Inflatable Bone Shape Support,Head and Neck Support Pillows...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.69</span><span class="ori_price">$21.99</span></address>
+      <textarea readonly="readonly" class="code_area">153CS7EH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $21.99</strong> with promo code: <strong class="m_codes">153CS7EH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2xUff55">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="14.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yfixi0"><img src="https://m.media-amazon.com/images/I/718+h9vV3hL._SR400,400_.jpg" alt="Zoppen International Travel Plug" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>265 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yfixi0">Zoppen International Travel Plug Adapter 4 USB Universal Outlets All in One Wall Charger US, Euro, UK, AU, JP, CN...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.39</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">10NB18P7</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>10% off at $15.99</strong> with promo code: <strong class="m_codes">10NB18P7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Yfixi0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="25.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32FIt5G"><img src="https://m.media-amazon.com/images/I/811OanPpIzL._SR400,400_.jpg" alt="OMOTON Detachable Keyboard Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>21 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32FIt5G">OMOTON Detachable Keyboard Case for New iPad 9.7” 2018&2017, iPad Pro 9.7, iPad Air/Air 2,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.19</span><span class="ori_price">$41.99</span></address>
+      <textarea readonly="readonly" class="code_area">40DHKRD6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $41.99</strong> with promo code: <strong class="m_codes">40DHKRD6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 06:00 AM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32FIt5G">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="49" data-price="6.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Lx15j0"><img src="https://m.media-amazon.com/images/I/91Kq05dEBpL._SR400,400_.jpg" alt="Flash Tattoos" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>368 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>49% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Lx15j0">Flash Tattoos | Temporary Tattoos For Women & Kids - 8 Sheets Semi Permanent Tattoo - Best Tattoo Temporary Deal...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.10</span><span class="ori_price">$11.97</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">498STMR1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>49% off at $11.97</strong> with promo code: <strong class="m_codes">498STMR1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Lx15j0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="47" data-price="36.02">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XTRn0F"><img src="https://m.media-amazon.com/images/I/71R2GaYojvL._SR400,400_.jpg" alt="Ultimate Metal Detector" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>260 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>47% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XTRn0F">Ultimate Metal Detector for Adults - Waterproof Pro Detectors with Pinpointer for Kids - High Accuracy...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$36.02</span><span class="ori_price">$67.97</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">473LSI13</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>47% off at $67.97</strong> with promo code: <strong class="m_codes">473LSI13</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XTRn0F">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JSbtP7"><img src="https://m.media-amazon.com/images/I/61NJyviBxiL._SR400,400_.jpg" alt="YISSVIC Hand Blender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>43 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JSbtP7">YISSVIC Hand Blender 1000W 700ml Immersion Blender 9 Speed Control, 4 In-1 Powerful Stick Blender, Chopper,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.99</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">30IJDUAD</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $39.99</strong> with promo code: <strong class="m_codes">30IJDUAD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JSbtP7">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YfTlIf"><img src="https://m.media-amazon.com/images/I/71Rvc8BhzwL._SR400,400_.jpg" alt="Levesolls Sandwich Pillow" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>67 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YfTlIf">Levesolls Sandwich Pillow Adjustable Memory Foam Pillow Bamboo Pillow for Sleeping Cervical Pillow for Neck...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.99</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">30DP84T8</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $39.99</strong> with promo code: <strong class="m_codes">30DP84T8</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YfTlIf">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JQN78A"><img src="https://m.media-amazon.com/images/I/61qxOzQIw0L._SR400,400_.jpg" alt="Yoga Flip Flop Casual Flats Sandals" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>110 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JQN78A">HomyWolf Womens Slingback Yoga Flip Flop Casual Flats Sandals Beach Slipper</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">60UPL8Q4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $19.99</strong> with promo code: <strong class="m_codes">60UPL8Q4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JQN78A">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JQZnpq"><img src="https://m.media-amazon.com/images/I/61tEqdGrLXL._SR400,400_.jpg" alt="Cocktail Shaker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JQZnpq">Cocktail Shaker, Martini Shaker, Drink Shaker, Cocktail Shaker Set 12 Piece, Boston Shaker Bar Set, Cocktail Strainer...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">50EMG8B4</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $24.99</strong> with promo code: <strong class="m_codes">50EMG8B4</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JQZnpq">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="63.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6AyL7"><img src="https://m.media-amazon.com/images/I/61lmXxYBcUL._SR400,400_.jpg" alt="Digital Camera Vlogging Camera" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>109 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y6AyL7">Digital Camera Vlogging Camera, Full HD 1080p 24.0MP VideoSky Video Camera Camcorder with Wide Angle Lens,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$63.00</span><span class="ori_price">$179.99</span></address>
+      <textarea readonly="readonly" class="code_area">65ZHT454</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $179.99</strong> with promo code: <strong class="m_codes">65ZHT454</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Y6AyL7">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="20.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/32CL8gC"><img src="https://m.media-amazon.com/images/I/41eydjW+cOL._SR400,400_.jpg" alt="20000mAh Portable Charger" /></a>
