--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -43,7 +43,7 @@
         
         <div class="lt_sort_box clearfix">
           <ul class="clearfix">
-            <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
+            <li><a href="/deals/bestdeals" class="pure-button">All Codes</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
             <li><a href="#" class="pure-button sort2">Price Low</a></li>
             <li><a href="#" class="pure-button sort3">Sale High</a></li>
@@ -54,12 +54,12 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals We've Picked On Amazon Jul. 20. 2019.</h2>
+        <h2>Daily Deals | We've Picked On Amazon Jul. 21. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
           <ul>
-            <li><a href="/deals/promo_codes" class="pure-button">All Codes</a></li>
+            <li><a href="/deals/bestdeals" class="pure-button">All Codes</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
             <li><a href="#" class="pure-button sort2">Price Low</a></li>
             <li><a href="#" class="pure-button sort3">Sale High</a></li>
@@ -71,7 +71,7 @@
           <%= render 'shared/amz_search' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_03">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_04">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
