--- a/app/views/shared/_bestdeals_days.html.erb
+++ b/app/views/shared/_bestdeals_days.html.erb
@@ -1,3 +1,4 @@
+<li><a href="/deals_days/day_04">Jul. 20. 2019.</a></li>
 <li><a href="/deals_days/day_03">Jul. 19. 2019.</a></li>
 <li><a href="/deals_days/day_02">Jul. 18. 2019.</a></li>
 <li><a href="/deals_days/day_01">Jul. 17. 2019.</a></li>
