--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -45,6 +45,192 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="60" data-price="10.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yj2VtR"><img src="https://m.media-amazon.com/images/I/61S2PDEDnvL._SR400,400_.jpg" alt="SUPRENT Beard Trimmer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yj2VtR">SUPRENT Beard Trimmer with Travel Case,Cordless 4 in 1 Body Groomer Kit of Mustache Trimmer, Nose Hair Trimmer...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.79</span><span class="ori_price">$26.98</span></address>
+      <textarea readonly="readonly" class="code_area">60UPXVWW</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $26.98</strong> with promo code: <strong class="m_codes">60UPXVWW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Yj2VtR">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="18.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XX19PO"><img src="https://m.media-amazon.com/images/I/716gH4N-VVL._SR400,400_.jpg" alt="Silicone Cooking Utensils Kitchen" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>66 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XX19PO">Silicone Cooking Utensils Kitchen Utensil Set 10 PCS Rose Gold Stainless Steel Handle Kitchen Utensil Set With...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.89</span><span class="ori_price">$26.99</span></address>
+      <textarea readonly="readonly" class="code_area">30TW4LWE</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $26.99</strong> with promo code: <strong class="m_codes">30TW4LWE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XX19PO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XXcZtd"><img src="https://m.media-amazon.com/images/I/6146VzV43iL._SR400,400_.jpg" alt="Lightning to USB Camera Adapter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>150 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XXcZtd">Lightning to USB Camera Adapter, YIKU 4 in 1 SD/TF Card Reader, Trail Game Camera Card Viewer Reader, Micro SD Card...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$15.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">60GYBANS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $15.99</strong> with promo code: <strong class="m_codes">60GYBANS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XXcZtd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="75" data-price="30.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XWNeci"><img src="https://m.media-amazon.com/images/I/51OgK3IGMlL._SR400,400_.jpg" alt="Car Dash Cam" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>77 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XWNeci">Car Dash Cam, Dashboard Camera Recorder with 32GB SD Card, MELCAM FHD 1080P, 3" LCD Screen, Driving Recorder...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.25</span><span class="ori_price">$120.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">758LE7M2</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>75% off at $120.99</strong> with promo code: <strong class="m_codes">758LE7M2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XWNeci">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="47" data-price="68.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XWbkEi"><img src="https://m.media-amazon.com/images/I/61GDkvBFxeL._SR400,400_.jpg" alt="Digital Camera Video Camcorder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>96 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>47% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XWbkEi">Digital Camera Video Camcorder, Full HD 1080P 24.0MP MELCAM YouTube Vlogging Camera with Wide Angle...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$68.89</span><span class="ori_price">$129.99</span></address>
+      <textarea readonly="readonly" class="code_area">472C3C9U</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>47% off at $129.99</strong> with promo code: <strong class="m_codes">472C3C9U</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XWbkEi">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="15.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SrwVyt"><img src="https://m.media-amazon.com/images/I/61JN4TvRiZL._SR400,400_.jpg" alt="AGSDON Women’s Running Sport Sneakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>24 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SrwVyt">AGSDON Women’s Running Sport Sneakers, Comfort Breathable Walking Athletic Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.00</span><span class="ori_price">$49.99</span></address>
+      <textarea readonly="readonly" class="code_area">70JRTD72</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>percentage% off at $49.99</strong> with promo code: <strong class="m_codes">70JRTD72</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SrwVyt">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O6f5SR"><img src="https://m.media-amazon.com/images/I/61t-Z30QA3L._SR400,400_.jpg" alt="MAXEVIS iPhone XR Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>10 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O6f5SR">MAXEVIS iPhone XR Case, Precore Series Clear Protective Bumper Dual Layer Case with Transparent Soft TPU Back+...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">70UAYNGM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $14.99</strong> with promo code: <strong class="m_codes">70UAYNGM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 09:00 AM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O6f5SR">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="41.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YaI3kA"><img src="https://m.media-amazon.com/images/I/71Eas6+p7+L._SR400,400_.jpg" alt="HOTSUIT Sauna Suit Sweat Exercise Gym Suit" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>49 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YaI3kA">HOTSUIT Sauna Suit Sweat Exercise Gym Suit Fitness Training for Men Weight Loss</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.99</span><span class="ori_price">$69.99</span></address>
+      <textarea readonly="readonly" class="code_area">40YNTEBI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $69.99</strong> with promo code: <strong class="m_codes">40YNTEBI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YaI3kA">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="44.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JY61tV"><img src="https://m.media-amazon.com/images/I/71y3MEG0cnL._SR400,400_.jpg" alt="Portable Solar Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>79 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JY61tV">Portable Solar Charger 20000mAh, Elzle Qi Wireless Power Bank with 3 Solar Panels, Flashlight, Dual 5V/2.1A USB...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$44.99</span><span class="ori_price">$89.99</span></address>
+      <textarea readonly="readonly" class="code_area">50LYDURF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $89.99</strong> with promo code: <strong class="m_codes">50LYDURF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 23, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JY61tV">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="9.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ss7E7f"><img src="https://m.media-amazon.com/images/I/61e+iMdHu2L._SR400,400_.jpg" alt="MidTen Bore Sight Cal Red Dot" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>363 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ss7E7f">MidTen Bore Sight Cal Red Dot Boresighter 223 5.56mm Rem Gauge with Two Sets of Batteries</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.79</span><span class="ori_price">$13.99</span></address>
+      <textarea readonly="readonly" class="code_area">30V3KSQ3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $13.99</strong> with promo code: <strong class="m_codes">30V3KSQ3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Ss7E7f">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="24.49">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2SrtcAR"><img src="https://m.media-amazon.com/images/I/61fX-piCssL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
