--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,20 +19,6 @@
               <a target="_blank" href="#n"><i class="fab fa-youtube"></i></a>
             </div>
           </div>
-
-          <div class="footer-section links clearfix">
-            <h2>Quick Links</h2><br />
-            <ul>
-              <a href="/"><li>HOME</li></a>
-              <a href="/categories"><li>CATEGORY</li></a>
-              <a href="/recommends"><li>FEATURED</li></a>
-              <a href="/deals/bestdeals"><li>DAILY DEALS</li></a>
-              <a href="/deals/promo_codes"><li>PROMO CODES</li></a>
-              <a href="/deals/quick_search"><li>QUICK SEARCH</li></a>
-              <a href="/deals/promotions"><li>PROMOTIONS</li></a>
-            </ul>
-          </div>
-
           <div class="footer-section contact-form clearfix">
             <h2>Contact Us</h2><br />
             <form action="/" method="post">
@@ -41,14 +27,23 @@
              <button type="submit" class="btn btn-big contact-btn">Send</button>
             </form>
           </div>
-
         </div>
         
-        <!-- <div class="footer-bottom">
-          &copy; ohigottabuythis.com | Designed by Steve
-        </div> -->
-      </div>
-
-    </div>
-    
+        <!-- <div class="footer-bottom clearfix">
+          <div class="quick_menu clearfix">
+            <ul class="clearfix">
+              <li><h3>Quick Links</h3></li>
+              <li><a href="#n">HOME</a></li>
+              <li><a href="#n">CATEGORY</a></li>
+              <li><a href="#n">FEATURED</a></li>
+              <li><a href="#n">DAILY DEALS</a></li>
+              <li><a href="#n">PROMO CODES</a></li>
+              <li><a href="#n">QUICK SEARCH</a></li>
+              <li><a href="#n">PROMOTIONS</a></li>
+            </ul>
+          </div>
+        </div>
+ -->
+      </div><!--./wrap-->
+    </div><!--./footer-->
 </div>
