--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -351,26 +351,32 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 /* for Footer Section */
-.footer{background:#000;color:#fff;height:350px;position:relative;font-family: 'Montserrat', sans-serif;}
-.footer .footer-content{height:350px;}
-.footer .footer-content .footer-section{padding:25px;}
+.footer{background:#000;color:#fff;height:300px;position:relative;font-family: 'Montserrat', sans-serif;}
+/*.footer .footer-content{height:350px;}*/
+.footer .footer-content .footer-section{padding:25px 25px 10px 25px;}
 .footer .footer-content h1, .footer .footer-content h2{color:#fff;}
-.footer .footer-content .about{float:left;width:34%;margin-right:1%;}
-.footer .footer-content .links{float:left;width:24%;margin-right:1%;}
-.footer .footer-content .contact-form{float:left;width:40%;}
+.footer .footer-content .about{float:left;width:49%;margin-right:1%;}
+/*.footer .footer-content .links{float:left;width:24%;margin-right:1%;}*/
+.footer .footer-content .contact-form{float:left;width:49%;margin-left:1%;}
 .footer .footer-content .about p{margin:10px 0;}
 .footer .footer-content .about h1 span{color:#08f;}
 .footer .footer-content .about .contact span{display:block;margin-bottom:8px;}
 .footer .footer-content .about .socials a{border:1px solid #616161;width:45px;height:41px;padding-top:5px;margin-right:5px;text-align:center;display:inline-block;font-size:1.3em;border-radius:5px;transition:all .3s;}
 .footer .footer-content .about .socials a:hover{border:1px solid #fff;color:#fff;transition:all .3s;}
-.footer .footer-content .links ul a{padding:0 10px;display:block;margin-bottom:10px;font-size:17px;text-decoration:none;color:#fff;transition:all .3s;}
-.footer .footer-content .links ul a:hover{font-weight:bold;margin-left:15px;transition:all .3s;}
+/*.footer .footer-content .links ul a{padding:0 10px;display:block;margin-bottom:10px;font-size:17px;text-decoration:none;color:#fff;transition:all .3s;}*/
+/*.footer .footer-content .links ul a:hover{font-weight:bold;margin-left:15px;transition:all .3s;}*/
 .footer .footer-content .contact-form .contact-input{background:#272727;color:#fff;margin-bottom:10px;line-height:1.5rem;padding:.5rem .8rem;width:100%;border:none;}
 .footer .footer-content .contact-form .contact-input:focus{background:#1a1a1a;}
 .footer .footer-content .contact-form .btn{padding:5px 10px;background:#006669;color:#fff;border:1px solid transparent;border-radius:5px;}
 .footer .footer-content .contact-form .btn-big{padding:7px 12px;line-height:.1.3rem;}
 .footer .footer-content .contact-form .contact-btn{float:right;}
-.footer .footer-bottom{background:#343a40;color:#686868;height:50px;width:100%;text-align:center;position:absolute;bottom:0px;left:0px;padding-top:13px;}
+.footer .footer-bottom{background:#000;height:50px;width:100%;text-align:center;position:absolute;bottom:0px;left:0px;}
+.footer .footer-bottom .quick_menu{}
+.footer .footer-bottom .quick_menu ul{margin-left:60px;}
+.footer .footer-bottom .quick_menu ul li{float:left;margin:0 1%;}
+.footer .footer-bottom .quick_menu ul li h3{line-height:20px;}
+.footer .footer-bottom .quick_menu ul li a{text-decoration:none;color:#fff;transition:all .3s;}
+.footer .footer-bottom .quick_menu ul li a:hover{font-weight:bold;margin-left:15px;transition:all .3s;}
 
 @media screen and (max-width:640px){
   .footer{height:auto;}
@@ -379,17 +385,15 @@ header .gnb_m,header .gnb_open2{display:none;}
   .footer .footer-content .about{float:none;width:100%;margin-right:0%;}
   .footer .footer-content .links{float:none;width:100%;margin-right:0%;}
   .footer .footer-content .contact-form{float:none;width:100%;}
-  .footer .footer-content .links ul a{margin-bottom:5px;}
+  /*.footer .footer-content .links ul a{margin-bottom:5px;}*/
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .footer{height:300px;}
   .footer .footer-content .footer-section{padding:15px 0;}
   .footer .footer-content h1, .footer .footer-content h2{font-size:18px;}
-  .footer .footer-content .about{float:left;width:34%;}
-  .footer .footer-content .links{float:left;width:26%;}
-  .footer .footer-content .contact-form{float:left;width:38%;}
+
   .footer .footer-content .about .socials a{width:40px;height:40px;}
-  .footer .footer-content .links ul a{font-size:14px;}
+  /*.footer .footer-content .links ul a{font-size:14px;}*/
 }
 
 
