--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -351,25 +351,21 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 /* for Footer Section */
-.footer{background:#000;color:#fff;height:300px;position:relative;font-family: 'Montserrat', sans-serif;}
-/*.footer .footer-content{height:350px;}*/
+.footer{background:#000;color:#fff;font-family: 'Montserrat', sans-serif;margin-top:75px;}
 .footer .footer-content .footer-section{padding:25px 25px 10px 25px;}
 .footer .footer-content h1, .footer .footer-content h2{color:#fff;}
 .footer .footer-content .about{float:left;width:49%;margin-right:1%;}
-/*.footer .footer-content .links{float:left;width:24%;margin-right:1%;}*/
 .footer .footer-content .contact-form{float:left;width:49%;margin-left:1%;}
 .footer .footer-content .about p{margin:10px 0;}
 .footer .footer-content .about h1 span{color:#08f;}
 .footer .footer-content .about .contact span{display:block;margin-bottom:8px;}
 .footer .footer-content .about .socials a{border:1px solid #616161;width:45px;height:41px;padding-top:5px;margin-right:5px;text-align:center;display:inline-block;font-size:1.3em;border-radius:5px;transition:all .3s;}
 .footer .footer-content .about .socials a:hover{border:1px solid #fff;color:#fff;transition:all .3s;}
-/*.footer .footer-content .links ul a{padding:0 10px;display:block;margin-bottom:10px;font-size:17px;text-decoration:none;color:#fff;transition:all .3s;}*/
-/*.footer .footer-content .links ul a:hover{font-weight:bold;margin-left:15px;transition:all .3s;}*/
-.footer .footer-content .contact-form .contact-input{background:#272727;color:#fff;margin-bottom:10px;line-height:1.5rem;padding:.5rem .8rem;width:100%;border:none;}
-.footer .footer-content .contact-form .contact-input:focus{background:#1a1a1a;}
-.footer .footer-content .contact-form .btn{padding:5px 10px;background:#006669;color:#fff;border:1px solid transparent;border-radius:5px;}
-.footer .footer-content .contact-form .btn-big{padding:7px 12px;line-height:.1.3rem;}
-.footer .footer-content .contact-form .contact-btn{float:right;}
+.footer .footer-content .contact-form ul{margin:10px 0;}
+.footer .footer-content .contact-form ul li{float:left;margin:0 2% 3% 0;}
+.footer .footer-content .contact-form ul li a{text-decoration:none;color:#000;background:#fff;padding:5px 7px;border-radius:10px;}
+.footer .footer-content .contact_us{}
+.footer .footer-content .contact_us a{text-decoration:none;color:#fff;}
 .footer .footer-bottom{background:#000;height:50px;width:100%;text-align:center;position:absolute;bottom:0px;left:0px;}
 .footer .footer-bottom .quick_menu{}
 .footer .footer-bottom .quick_menu ul{margin-left:60px;}
@@ -385,19 +381,36 @@ header .gnb_m,header .gnb_open2{display:none;}
   .footer .footer-content .about{float:none;width:100%;margin-right:0%;}
   .footer .footer-content .links{float:none;width:100%;margin-right:0%;}
   .footer .footer-content .contact-form{float:none;width:100%;}
-  /*.footer .footer-content .links ul a{margin-bottom:5px;}*/
 }
 @media screen and (min-width:641px) and (max-width:1199px){
-  .footer{height:300px;}
   .footer .footer-content .footer-section{padding:15px 0;}
   .footer .footer-content h1, .footer .footer-content h2{font-size:18px;}
-
   .footer .footer-content .about .socials a{width:40px;height:40px;}
-  /*.footer .footer-content .links ul a{font-size:14px;}*/
 }
 
 
+/*About Us*/
+.about_us{margin-top:270px;}
 
+/*Message Section*/
+.message{width:1000px;margin:150px auto 100px auto;}
+.message table {border-collapse: collapse;width: 100%;}
+.message th, td {padding: 8px;text-align: left;border-bottom: 1px solid #ddd;}
+.message table tr th:nth-child(1){width:60%;}
+.message table tr td a{text-decoration:none;color:#000;}
 
+/*Contact Section*/
+.contact_form{width:800px;margin:65px auto 100px auto;}
+.contact_form input, .contact_form textarea{background:#272727;color:#fff;margin-bottom:10px;line-height:1.5rem;padding:.5rem .8rem;width:100%;border:none;border-radius:10px;}
+.contact_form input:focus, .contact_form textarea:focus{background:#1a1a1a;}
+.contact_form .btn{padding:5px 10px;background:#006669;color:#fff;border:1px solid transparent;border-radius:5px;}
+
+/*Message Show Section*/
+.flash_message{width:1000px;margin:150px auto 50px auto;text-align:center}
+.flash_message h2{font-size:40px;}
+.flash_message h3{font-size:25px;}
+.comment_show{margin-top:100px;}
+.comment_show p{margin:30px 0 20px 0;}
+.comment_show a{text-decoration:none;background:#000;color:#fff;padding:5px 7px;border-radius:10px;display:inline-block;}
 
   
