--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -45,6 +45,188 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="15" data-price="31.44">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y9s9GO"><img src="https://m.media-amazon.com/images/I/71ZxMxcaY1L._SR400,400_.jpg" alt="PopBabies Portable Blender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,261 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y9s9GO">PopBabies Portable Blender, Personal Blender with USB Rechargeable Small Blender for Shakes and Smoothies,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.44</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">15SO6IGL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $36.99</strong> with promo code: <strong class="m_codes">15SO6IGL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Y9s9GO">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XSPmls"><img src="https://m.media-amazon.com/images/I/81kwgNxkoeL._SR400,400_.jpg" alt="VEPOSE Men's Slip on Dress Shoes" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>46 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XSPmls">VEPOSE Men's Slip on Dress Shoes Formal Square Toe Loafers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$32.99</span></address>
+      <textarea readonly="readonly" class="code_area">40ZSYL1W</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $32.99</strong> with promo code: <strong class="m_codes">40ZSYL1W</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 27, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XSPmls">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="47" data-price="6.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y8VYYe"><img src="https://m.media-amazon.com/images/I/71s8ttJVtHL._SR400,400_.jpg" alt="Brexlink Quick Charge 3.0 Car Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>55 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>47% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y8VYYe">Brexlink Quick Charge 3.0 Car Charger 3A Dual QC USB Ports 36W Fast Car Charger Adapter,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.88</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">47ZG5UWM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>47% off at $12.99</strong> with promo code: <strong class="m_codes">47ZG5UWM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Y8VYYe">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="21.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XTv1MZ"><img src="https://m.media-amazon.com/images/I/812zcNW6IGL._SR400,400_.jpg" alt="Circle Crossbody Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>87 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XTv1MZ">The Lovely Tote Co. Women's Fashion Crocodile Circle Crossbody Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.50</span><span class="ori_price">$42.99</span></address>
+      <textarea readonly="readonly" class="code_area">50NGJ7FK</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $42.99</strong> with promo code: <strong class="m_codes">50NGJ7FK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XTv1MZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ObcDun"><img src="https://m.media-amazon.com/images/I/91-u4bIGHWL._SR400,400_.jpg" alt="TV Wall Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>291 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ObcDun">USX MOUNT Full Motion Swivel Articulating Tilt TV Wall Mount Bracket for 26-55" LED, OLED, 4K TVs-Fit...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">404ILLFV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">404ILLFV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ObcDun">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2y88uwl"><img src="https://m.media-amazon.com/images/I/71+mPXFOXfL._SR400,400_.jpg" alt="Mini Wire Pendant Lighting" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>6 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2y88uwl">LALUZ 1-Light Industrial Mini Wire Pendant Lighting, Metal Cage Shade, Silver Brushed</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.00</span><span class="ori_price">$59.99</span></address>
+      <textarea readonly="readonly" class="code_area">509GBFAZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $59.99</strong> with promo code: <strong class="m_codes">509GBFAZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2y88uwl">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.17">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JTHk1X"><img src="https://m.media-amazon.com/images/I/51Q1OMYadRL._SR400,400_.jpg" alt="DiamondSmile Replacement Toothbrush Heads" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,191 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JTHk1X">DiamondSmile Replacement Toothbrush Heads Compatible with Sonicare Plaque Control HX9028/64 8 Pack,fits 2 Series,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.17</span><span class="ori_price">$16.95</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">40LANVEDA</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $16.95</strong> with promo code: <strong class="m_codes">40LANVEDA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 05, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JTHk1X">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SsP7aQ"><img src="https://m.media-amazon.com/images/I/511mj86mEKL._SR400,400_.jpg" alt="Selkie Mini Wireless Earbud" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>172 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SsP7aQ">Selkie Mini Wireless Earbud, [Upgrade Version] Single Wireless Earbud with HD Sound Quality, 10 Hours Talkingtime...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.99</span><span class="ori_price">$21.99</span></address>
+      <textarea readonly="readonly" class="code_area">50ORVK22</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $21.99</strong> with promo code: <strong class="m_codes">50ORVK22</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SsP7aQ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JUYvjz"><img src="https://m.media-amazon.com/images/I/61hXT5vo8oL._SR400,400_.jpg" alt="Retro Handheld Game Console" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JUYvjz">Retro Handheld Game Console, with Built in 3000 Classic Games,Dual Core 16G Emulator 3.0'' FC TV Support Game Player,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$55.99</span><span class="ori_price">$69.99</span></address>
+      <textarea readonly="readonly" class="code_area">20F1X7HS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $69.99</strong> with promo code: <strong class="m_codes">20F1X7HS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JUYvjz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="5.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LAdKlw"><img src="https://m.media-amazon.com/images/I/61hI8eYmqRL._SR400,400_.jpg" alt="Lightsaber Chopsticks" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>59 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LAdKlw">Lightsaber Chopsticks Light Saber Chopsticks Light Up Chop Sticks Reusable Funny Gift for Party (1 pair, Blue)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.00</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">50YJGHRF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $9.99</strong> with promo code: <strong class="m_codes">50YJGHRF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 23, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LAdKlw">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="13.19">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Y4cEjp"><img src="https://m.media-amazon.com/images/I/51xPnFQoluL._SR400,400_.jpg" alt="Selfie Stick Tripod" /></a>
