--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -281,7 +281,7 @@
               <tr>
               <tr>
               <td class="tg-spn1"> Toys & Games</td>
-              <td class="tg-spn1"><a target="_blank" href="https://www.amazon.com/s?rh=n%3A165793011%2Cp_75%3A70-&amp;ie=UTF8&_encoding=UTF8&tag=3628-20&linkCode=ur2&linkId=c528d8f883f0302dd703a149108792a0&camp=1789&creative=9325">70</a></td>
+              <td class="tg-spn1"><a target="_blank" href="https://www.amazon.com/s?rh=n%3A165793011%2Cp_75%3A70-&amp;ie=UTF8&_encoding=UTF8&tag=3628-20&linkCode=ur2&linkId=c528d8f883f0302dd703a149108792a0&camp=1789&creative=9325">70%</a></td>
               <td class="tg-spn1"><a target="_blank" href="https://www.amazon.com/s?rh=n%3A165793011%2Cp_75%3A50-&amp;ie=UTF8&_encoding=UTF8&tag=3628-20&linkCode=ur2&linkId=b4c31b87cac285ac0ce245e0a5e11fe8&camp=1789&creative=9325">50%</a></td>
               <td class="tg-spn1"><a target="_blank" href="https://www.amazon.com/s?rh=n%3A165793011%2Cp_75%3A20-&amp;ie=UTF8&_encoding=UTF8&tag=3628-20&linkCode=ur2&linkId=e4b1ff67ff97a454e0be13b44770c230&camp=1789&creative=9325">20%</a></td>
               <td class="tg-spn1"><a target="_blank" href="https://www.amazon.com/s?rh=n%3A165793011%2Cp_75%3A10-&amp;ie=UTF8&_encoding=UTF8&tag=3628-20&linkCode=ur2&linkId=8990b0e774deccab56073fb87aa81836&camp=1789&creative=9325">10%</a></td>
