--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -44,6 +44,133 @@
 
  <p>run out of stock soon</p>
 -->
+<div class="card clearfix" data-score="50" data-price="5.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Sz7YRz"><img src="https://m.media-amazon.com/images/I/61vl7awNzhL._SR400,400_.jpg" alt="Charging Cable" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>6 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Sz7YRz">Charging Cable 3 in 1 for Cell Phones Charger - Retractable USB Cord Data Sync Adapter Multi...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.00</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">50CABLE3IN1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $9.99</strong> with promo code: <strong class="m_codes">50CABLE3IN1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 24, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Sz7YRz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JZftgL"><img src="https://m.media-amazon.com/images/I/61lyulZQvnL._SR400,400_.jpg" alt="Dresses Plain Tank Dress" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>46 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JZftgL">DAIKEN Women's Summer Sleeveless Casual Loose Swing T-Shirt Dresses Plain Tank Dress</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">50ZOMWWO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50ZOMWWO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JZftgL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JWjLWh"><img src="https://m.media-amazon.com/images/I/81gTlSpfvlL._SR400,400_.jpg" alt="AUTMOR Car Trash..." /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>9 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JWjLWh">AUTMOR Car Trash Can with Lid and Storage Pockets, Auto Car Garbage Can, 100% Leak-Proof Car Organizer, Multipurpose Waterproof...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">40QAZDGO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $15.99</strong> with promo code: <strong class="m_codes">40QAZDGO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 14, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JWjLWh">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SwbagK"><img src="https://images-na.ssl-images-amazon.com/images/I/61z-lBk5IEL._SX679_.jpg" alt="IFYOO V-one Wired USB Gaming Controller" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>2 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SwbagK">IFYOO V-one Wired USB Gaming Controller Gamepad Joystick for PC (Windows XP/7/8/10) & Steam & Android & PS3</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.50</span><span class="ori_price">$29.00</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">50T1SE9Y</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.00</strong> with promo code: <strong class="m_codes">50T1SE9Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SwbagK">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XVQGUK"><img src="https://m.media-amazon.com/images/I/511vcN-HJcL._SR400,400_.jpg" alt="Nivava D9 True Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>158 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XVQGUK">Nivava D9 True Wireless Earbuds, Bluetooth 5.0 Headphones, 3D Stereo Sound, IPX5 Waterproof in-Ear Wireless...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">50RL7V8M</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50RL7V8M</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2XVQGUK">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YkJuRy"><img src="https://m.media-amazon.com/images/I/61I6VzWgbOL._SR400,400_.jpg" alt="COMFEE' MB-FS5077 Japanese" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>31 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YkJuRy">COMFEE' MB-FS5077 Japanese, Professional 17-in-1 Multi Cooker, Rice Warmer with Food Steamer,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$55.99</span><span class="ori_price">$79.99</span></address>
+      <textarea readonly="readonly" class="code_area">24MBFS5077</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $79.99</strong> with promo code: <strong class="m_codes">24MBFS5077</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YkJuRy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JXbJMX"><img src="https://m.media-amazon.com/images/I/81Yb8TJk0ZL._SR400,400_.jpg" alt="CYZ Women's 100% Cotton Woven Pajama" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>205 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JXbJMX">CYZ Women's 100% Cotton Woven Pajama CapriCYZ Women's 100% Cotton Woven Pajama Capri</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$11.99</span></address>
+      <textarea readonly="readonly" class="code_area">50WOVENCAPRI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $11.99</strong> with promo code: <strong class="m_codes">50WOVENCAPRI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JXbJMX">Use Code at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="15" data-price="31.44">
   <div class="image_box">
